--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -3,7 +3,8 @@
 <head>
     <title>LoRa Sensor Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <script src="/static/chart.udm.js"></script>
+    <!-- Load Chart.js directly from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.js"></script>
     <style>
         * {
             box-sizing: border-box;
