--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>LoRa Sensor Dashboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <script src="/static/chart.udm.js"></script>
+js"></script>
     <style>
         * {
             box-sizing: border-box;
@@ -604,7 +599,6 @@
                 <div class="controls-container">
                     <label>Node: </label>
                     <select id="nodeFilter" onchange="filterData()">
-                        <option value="">All Nodes</option>
                     </select>
 
                     <label>Show: </label>
@@ -643,12 +637,11 @@
 
                     <label for="chartSelector">Chart Type:</label>
                     <select id="chartSelector" onchange="changeChart()">
-                        <!-- existing options -->
                         <option value="temperature" selected>Temperature (°F)</option>
-                            <option value="humidity">Humidity (%)</option>
-                            <option value="pressure">Pressure (hPa)</option>
-                            <option value="battery">Battery Voltage (V)</option>
-                            <option value="signal">Signal Strength (RSSI dBm)</option>
+                        <option value="humidity">Humidity (%)</option>
+                        <option value="pressure">Pressure (hPa)</option>
+                        <option value="battery">Battery Voltage (V)</option>
+                        <option value="signal">Signal Strength (RSSI dBm)</option>
                     </select>
 
                     <label for="chartNodeSelect">Node:</label>
@@ -781,6 +774,7 @@
                   for (const nodeData of result.data) {
                       allData.push({
                       node_id: nodeData.node_id,
+                      node_name: nodeData.node_name || nodeData.node_id,
                       temperature_f: nodeData.temperature ? (nodeData.temperature * 9/5 + 32) : '--',
                       humidity: nodeData.humidity || '--',
                       pressure_hpa: nodeData.pressure || '--',
@@ -875,14 +869,17 @@
             // Render the chart
             renderSingleChart();
         }
+        
         function renderSingleChart() {
             const ctx = document.getElementById('singleChart').getContext('2d');
             if (currentChart) currentChart.destroy();
 
             const selectedNode = document.getElementById('chartNodeSelect').value;
-            let filteredChartData = chartData;
+            let filteredChartData;
 
-            if (selectedNode !== 'all') {
+            if (selectedNode === 'all') {
+                filteredChartData = chartData;
+            } else {
                 filteredChartData = chartData.filter(item => item.node_id === selectedNode);
             }
 
@@ -986,166 +983,8 @@
                     labels: timeLabels,
                     datasets: [dataset]
                 },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    layout: {
-                        padding: {
-                            top: 5,
-                            bottom: 20,
-                            left: 10,
-                            right: 10
-                        }
-                    },
-                    interaction: {
-                        intersect: false,
-                        mode: 'index'
-                    },
-                    plugins: {
-                        legend: {
-                            display: false
-                        },
-
-                        tooltip: {
-                                backgroundColor: 'rgba(30, 60, 114, 0.95)',
-                                titleColor: '#ffffff',
-                                bodyColor: '#ffffff',
-                                borderColor: 'rgba(255, 255, 255, 0.3)',
-                                borderWidth: 1,
-                                cornerRadius: 8,
-                                displayColors: true,
-                                callbacks: {
-                                    title: function(tooltipItems) {
-                                    // Show complete gateway timestamp
-                                    const dataIndex = tooltipItems[0].dataIndex;
-                                    const dataPoint = chartData[dataIndex];
-                                    // Use complete gateway timestamp
-                                    const fullTimestamp = dataPoint.fullTimestamp || dataPoint.gatewayTimestamp;
-                                    if (fullTimestamp) {
-                                        try {
-                                            // Clean up timestamp format for proper parsing
-                                            let cleanTimestamp = (typeof fullTimestamp === 'object') ?
-                                                (fullTimestamp.utc || fullTimestamp.formatted || fullTimestamp.toString()) :
-                                                fullTimestamp;
-                                            // Handle different timestamp formats
-                                            if (typeof fullTimestamp === 'string') {
-                                                // Remove 'UTC' suffix and clean up format
-                                                cleanTimestamp = fullTimestamp.replace(' UTC', '').replace('UTC', '');
-
-                                                // If it ends with 'Z', it's already ISO format
-                                                if (!cleanTimestamp.endsWith('Z') && cleanTimestamp.includes('T')) {
-                                                    cleanTimestamp += 'Z'; // Add Z for UTC
-                                                }
-                                            }
-
-                                            const date = new Date(cleanTimestamp);
-
-                                            // Check if date is valid
-                                            if (isNaN(date.getTime())) {
-                                                console.log('Invalid timestamp:', fullTimestamp, 'cleaned:', cleanTimestamp);
-                                                return fullTimestamp; // Return original if can't parse
-                                            }
-
-                                            return date.toLocaleString('en-US', {
-                                                timeZone: currentTimezone,
-                                                weekday: 'short',
-                                                year: 'numeric',
-                                                month: 'short',
-                                                day: 'numeric',
-                                                hour: '2-digit',
-                                                minute: '2-digit',
-                                                second: '2-digit',
-                                                timeZoneName: 'short'
-                                            });
-                                        } catch (error) {
-                                            console.log('Timestamp parsing error:', error, 'for timestamp:', fullTimestamp);
-                                            return fullTimestamp;
-                                        }
-                                    }
-                                    return tooltipItems[0].label;
-                                },
-                                label: function(context) {
-                                        let value = context.parsed.y;
-                                        let unit = '';
-
-                                        // Add appropriate units
-                                        switch (currentChartType) {
-                                            case 'temperature':
-                                                unit = '°F';
-                                                break;
-                                            case 'humidity':
-                                                unit = '%';
-                                                break;
-                                            case 'pressure':
-                                                unit = ' hPa';
-                                                break;
-                                            case 'battery':
-                                                unit = 'V';
-                                                break;
-                                            case 'signal':
-                                                unit = ' dBm';
-                                                break;
-                                        }
-
-                                        return `${context.dataset.label}: ${value}${unit}`;
-                                    },
-                                    afterBody: function(tooltipItems) {
-                                        const dataIndex = tooltipItems[0].dataIndex;
-                                        const dataPoint = chartData[dataIndex];
-
-                                        return [
-                                            `Node: ${dataPoint.node_id}`,
-                                            `Point ${dataIndex + 1} of ${chartData.length}`
-                                        ];
-                                    }
-                                }
-                            }
-                    },
-
-                    scales: {
-                        x: {
-                            display: true,
-                            ticks: {
-                                color: 'rgba(255, 255, 255, 0.85)',
-                                maxTicksLimit: 6,
-                                font: {
-                                    size: 10
-                                },
-                                maxRotation: 0,
-                                minRotation: 0,
-                                padding: 5
-                            },
-                            grid: {
-                                color: 'rgba(255, 255, 255, 0.1)',
-                                drawTicks: true
-                            }
-                        },
-                        y: {
-                            title: {
-                                display: true,
-                                text: dataset.label,
-                                color: 'rgba(255, 255, 255, 0.8)',
-                                font: {
-                                    size: 11
-                                }
-                            },
-                            ticks: {
-                                color: 'rgba(255, 255, 255, 0.8)',
-                                font: {
-                                    size: 10
-                                },
-                                callback: function(value) {
-                                    if (currentChartType === 'pressure') {
-                                        return value.toString();
-                                    }
-                                    return value;
-                                }
-                            },
-                            grid: { color: 'rgba(255, 255, 255, 0.1)' }
-                        }
-                    }
-                }
-            }
+                options: getChartOptions(chartType, dataset.label)
+            };
         }
 
         function updateChartTitle() {
@@ -1157,6 +996,138 @@
                 'signal': 'Signal Strength (RSSI dBm)'
             };
             document.getElementById('currentChartTitle').textContent = titles[currentChartType];
+        }
+
+        function getChartOptions(chartType, yAxisLabel) {
+            return {
+                responsive: true,
+                maintainAspectRatio: false,
+                layout: {
+                    padding: {
+                        top: 5,
+                        bottom: 20,
+                        left: 10,
+                        right: 10
+                    }
+                },
+                interaction: {
+                    intersect: false,
+                    mode: 'index'
+                },
+                plugins: {
+                    legend: {
+                        display: false
+                    },
+                    tooltip: {
+                        backgroundColor: 'rgba(30, 60, 114, 0.95)',
+                        titleColor: '#ffffff',
+                        bodyColor: '#ffffff',
+                        borderColor: 'rgba(255, 255, 255, 0.3)',
+                        borderWidth: 1,
+                        cornerRadius: 8,
+                        displayColors: true,
+                        callbacks: {
+                            title: function(tooltipItems) {
+                                const dataIndex = tooltipItems[0].dataIndex;
+                                const dataPoint = chartData[dataIndex];
+                                const fullTimestamp = dataPoint.fullTimestamp || dataPoint.gatewayTimestamp;
+                                if (fullTimestamp) {
+                                    try {
+                                        let cleanTimestamp = (typeof fullTimestamp === 'object') ?
+                                            (fullTimestamp.utc || fullTimestamp.formatted || fullTimestamp.toString()) :
+                                            fullTimestamp;
+                                        if (typeof fullTimestamp === 'string') {
+                                            cleanTimestamp = fullTimestamp.replace(' UTC', '').replace('UTC', '');
+                                            if (!cleanTimestamp.endsWith('Z') && cleanTimestamp.includes('T')) {
+                                                cleanTimestamp += 'Z';
+                                            }
+                                        }
+
+                                        const date = new Date(cleanTimestamp);
+                                        if (isNaN(date.getTime())) {
+                                            return fullTimestamp;
+                                        }
+
+                                        return date.toLocaleString('en-US', {
+                                            timeZone: currentTimezone,
+                                            weekday: 'short',
+                                            year: 'numeric',
+                                            month: 'short',
+                                            day: 'numeric',
+                                            hour: '2-digit',
+                                            minute: '2-digit',
+                                            second: '2-digit',
+                                            timeZoneName: 'short'
+                                        });
+                                    } catch (error) {
+                                        return fullTimestamp;
+                                    }
+                                }
+                                return tooltipItems[0].label;
+                            },
+                            label: function(context) {
+                                let value = context.parsed.y;
+                                let unit = '';
+
+                                switch (currentChartType) {
+                                    case 'temperature': unit = '°F'; break;
+                                    case 'humidity': unit = '%'; break;
+                                    case 'pressure': unit = ' hPa'; break;
+                                    case 'battery': unit = 'V'; break;
+                                    case 'signal': unit = ' dBm'; break;
+                                }
+
+                                return `${context.dataset.label}: ${value}${unit}`;
+                            },
+                            afterBody: function(tooltipItems) {
+                                const dataIndex = tooltipItems[0].dataIndex;
+                                const dataPoint = chartData[dataIndex];
+
+                                return [
+                                    `Node: ${dataPoint.node_id}`,
+                                    `Point ${dataIndex + 1} of ${chartData.length}`
+                                ];
+                            }
+                        }
+                    }
+                },
+                scales: {
+                    x: {
+                        display: true,
+                        ticks: {
+                            color: 'rgba(255, 255, 255, 0.85)',
+                            maxTicksLimit: 6,
+                            font: { size: 10 },
+                            maxRotation: 0,
+                            minRotation: 0,
+                            padding: 5
+                        },
+                        grid: {
+                            color: 'rgba(255, 255, 255, 0.1)',
+                            drawTicks: true
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: yAxisLabel,
+                            color: 'rgba(255, 255, 255, 0.8)',
+                            font: { size: 11 }
+                        },
+                        ticks: {
+                            color: 'rgba(255, 255, 255, 0.8)',
+                            font: { size: 10 },
+                            callback: function(value) {
+                                if (chartType === 'pressure') {
+                                    return value.toString();
+                                }
+                                return value;
+                            }
+                        },
+                        grid: { color: 'rgba(255, 255, 255, 0.1)' }
+                    }
+                }
+            };
         }
 
         function updateStatistics(data) {
@@ -1216,9 +1187,11 @@
             const nodes = [...new Set(allData.map(d => d.node_id))];
             nodeFilter.innerHTML = '<option value="">All Nodes</option>';
             nodes.forEach(nodeId => {
+                const nodeData = allData.find(d => d.node_id === nodeId);
+                const nodeName = nodeData.node_name || nodeId;
                 const option = document.createElement('option');
                 option.value = nodeId;
-                option.textContent = nodeId;
+                option.textContent = nodeName;
                 nodeFilter.appendChild(option);
             });
         }
@@ -1226,11 +1199,14 @@
         function populateChartNodeFilter() {
             const nodeFilter = document.getElementById('chartNodeSelect');
             const nodes = [...new Set(allData.map(d => d.node_id))];
-            nodeFilter.innerHTML = '<option value="all">All Nodes</option>';
-            nodes.forEach(nodeId => {
+            nodeFilter.innerHTML = '';
+            nodes.forEach((nodeId, index) => {
+                const nodeData = allData.find(d => d.node_id === nodeId);
+                const nodeName = nodeData.node_name || nodeId;
                 const option = document.createElement('option');
                 option.value = nodeId;
-                option.textContent = `Node ${nodeId}`;
+                option.textContent = nodeName;
+                if (index === 0) option.selected = true;
                 nodeFilter.appendChild(option);
             });
         }
