--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -1,4 +1,9 @@
-js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>LoRa Sensor Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <style>
         * {
             box-sizing: border-box;
